Fixed issue where check bubble would stretch for multii-line todo tasks

--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,7 @@ header {
 
 .todoContent p {
   word-break: break-all;
-
+  width: 80%;
 }
 
 .todoContent:hover {
@@ -155,8 +155,8 @@ header {
 .check {
   background: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
   border-radius: 50%;
-  height: 60%;
-  width: 60%;
+  height: 15px;
+  width: 15px;
   padding: 5px;
   opacity: 0;
 }
@@ -268,6 +268,11 @@ footer a {
   }
 
   .checkBubble {
+    width: 20px;
+    height: 20px;
+  }
+
+  .check {
     width: 20px;
     height: 20px;
   }
